<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="udacity.vignesh.myappprotfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:singleLine="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:id="@+id/title"
        android:layout_centerHorizontal="true"
        android:clickable="false"
        android:minWidth="200dp"
        android:textAlignment="center"
        android:textSize="25dp"
        android:textColor="#000"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app1_name"
        android:id="@+id/spotify_button"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:background="#F08C35"
        android:minWidth="200dp"
        android:layout_margin="5dp"
        android:onClick="spotifyMessage" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app3_name"
        android:id="@+id/build_button"
        android:layout_alignParentEnd="false"
        android:clickable="true"
        android:layout_below="@+id/library_button"
        android:layout_centerHorizontal="true"
        android:background="#F08C35"
        android:minWidth="200dp"
        android:layout_margin="5dp"
        android:onClick="buildItMessage" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app4_name"
        android:id="@+id/xyz_button"
        android:layout_alignParentEnd="false"
        android:clickable="true"
        android:layout_below="@+id/build_button"
        android:layout_centerHorizontal="true"
        android:background="#F08C35"
        android:minWidth="200dp"
        android:layout_margin="5dp"
        android:onClick="xyzMessage" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/own_app_name"
        android:id="@+id/capstone_button"
        android:layout_alignParentEnd="false"
        android:clickable="true"
        android:layout_below="@+id/xyz_button"
        android:layout_centerHorizontal="true"
        android:background="#f44336"
        android:elegantTextHeight="false"
        android:minWidth="200dp"
        android:layout_margin="5dp"
        android:onClick="capstoneMessage"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app2_1_name"
        android:id="@+id/scores_button"
        android:clickable="true"
        android:layout_below="@+id/spotify_button"
        android:layout_centerHorizontal="true"
        android:background="#F08C35"
        android:minWidth="200dp"
        android:layout_margin="5dp"
        android:onClick="scoresMessage" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app2_2_name"
        android:id="@+id/library_button"
        android:layout_alignParentEnd="false"
        android:clickable="true"
        android:layout_below="@+id/scores_button"
        android:layout_centerHorizontal="true"
        android:background="#F08C35"
        android:minWidth="200dp"
        android:layout_margin="5dp"
        android:onClick="libraryMessage"/>
</RelativeLayout>
